# os_lab_4

./: README.md
src/: CMakeLists.txt  Dynamic_Main.cpp  Static_Main.cpp  realization.hpp  realization_1.cpp  realization_2.cpp
